# swagger/swagger.json
@@ -349,6 +349,214 @@
         ]
       }
     },
+    "/product/{id}/review": {
+      "get": {
+        "operationId": "ProductController_getProductReviews",
+        "parameters": [
+          {
+            "name": "l",
+            "required": false,
+            "in": "query",
+            "description": "Items limit on page ( from 1 to 50 )",
+            "schema": {
+              "default": 10,
+              "example": 15,
+              "type": "number"
+            }
+          },
+          {
+            "name": "p",
+            "required": false,
+            "in": "query",
+            "description": "Items page ( min 1 )",
+            "schema": {
+              "default": 1,
+              "example": 2,
+              "type": "number"
+            }
+          },
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Product id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Reviews recived",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReviewListDetails"
+                }
+              }
+            }
+          },
+          "5XX": {
+            "description": "Server error"
+          },
+          "4XX": {
+            "description": "Check response message"
+          }
+        },
+        "summary": "Get reviews by product id",
+        "tags": [
+          "Product"
+        ]
+      },
+      "post": {
+        "operationId": "ProductController_createProductReview",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Product id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateReviewDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Product review created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReviewDetails"
+                }
+              }
+            }
+          },
+          "5XX": {
+            "description": "Server error"
+          },
+          "4XX": {
+            "description": "Check response message"
+          }
+        },
+        "summary": "Create product review",
+        "tags": [
+          "Product"
+        ]
+      }
+    },
+    "/product/{prodid}/review/{reviewid}": {
+      "patch": {
+        "operationId": "ProductController_updateProductReview",
+        "parameters": [
+          {
+            "name": "prodid",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "reviewid",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Product id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateReviewDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Product review updated"
+          },
+          "5XX": {
+            "description": "Server error"
+          },
+          "4XX": {
+            "description": "Check response message"
+          }
+        },
+        "summary": "Update product review",
+        "tags": [
+          "Product"
+        ]
+      },
+      "delete": {
+        "operationId": "ProductController_DeleteProductReview",
+        "parameters": [
+          {
+            "name": "prodid",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "reviewid",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Product id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Product review deleted"
+          },
+          "5XX": {
+            "description": "Server error"
+          },
+          "4XX": {
+            "description": "Check response message"
+          }
+        },
+        "summary": "Delete product review",
+        "tags": [
+          "Product"
+        ]
+      }
+    },
     "/category": {
       "post": {
         "operationId": "CategoryController_createCategory",
@@ -634,7 +842,7 @@
     },
     "/user/cart": {
       "get": {
-        "operationId": "CartController_getCart",
+        "operationId": "UserController_getCart",
         "parameters": [
           {
             "name": "l",
@@ -684,11 +892,11 @@
         ],
         "summary": "Get user cart",
         "tags": [
-          "Cart"
+          "User"
         ]
       },
       "post": {
-        "operationId": "CartController_addProductToUserCart",
+        "operationId": "UserController_addProductToUserCart",
         "parameters": [
           {
             "name": "pid",
@@ -718,22 +926,22 @@
         ],
         "summary": "Add product to user cart",
         "tags": [
-          "Cart"
+          "User"
         ]
       },
       "delete": {
-        "operationId": "CartController_removeProductFromCart",
-        "parameters": [
-          {
-            "name": "pid",
-            "required": true,
-            "in": "query",
-            "description": "Product id",
-            "schema": {
-              "type": "string"
+        "operationId": "UserController_removeProductFromCart",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SelectCartItemDto"
+              }
             }
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "Success removed"
@@ -750,9 +958,9 @@
             "bearer": []
           }
         ],
-        "summary": "Remove product from user cart",
+        "summary": "Remove products from user cart",
         "tags": [
-          "Cart"
+          "User"
         ]
       }
     }
@@ -852,19 +1060,19 @@
       "ProductImageEntity": {
         "type": "object",
         "properties": {
-          "uuid": {
+          "_uuid": {
             "type": "string",
             "description": "Image url"
           }
         },
         "required": [
-          "uuid"
+          "_uuid"
         ]
       },
       "ProductCategoryDetails": {
         "type": "object",
         "properties": {
-          "uuid": {
+          "_uuid": {
             "type": "string",
             "description": "Category id",
             "example": "17a54659-a06a-464f-a914-190cee7d4b1a"
@@ -876,7 +1084,7 @@
           }
         },
         "required": [
-          "uuid",
+          "_uuid",
           "name"
         ]
       },
@@ -910,6 +1118,14 @@
               "$ref": "#/components/schemas/ProductImageEntity"
             }
           },
+          "rating": {
+            "type": "number",
+            "description": "Product rating"
+          },
+          "review_count": {
+            "type": "number",
+            "description": "Product review count"
+          },
           "category": {
             "description": "Product category",
             "allOf": [
@@ -925,7 +1141,28 @@
           "price",
           "discount",
           "images",
+          "rating",
+          "review_count",
           "category"
+        ]
+      },
+      "ProductPriceRangeDetails": {
+        "type": "object",
+        "properties": {
+          "min": {
+            "type": "number",
+            "description": "Min price length",
+            "example": 100
+          },
+          "max": {
+            "type": "number",
+            "description": "Max price length",
+            "example": 5000
+          }
+        },
+        "required": [
+          "min",
+          "max"
         ]
       },
       "PaginationDetails": {
@@ -975,6 +1212,14 @@
               "$ref": "#/components/schemas/ProductDetails"
             }
           },
+          "price_range": {
+            "description": "Product price range",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/ProductPriceRangeDetails"
+              }
+            ]
+          },
           "pagintaion": {
             "description": "Paggination info",
             "allOf": [
@@ -986,6 +1231,7 @@
         },
         "required": [
           "data",
+          "price_range",
           "pagintaion"
         ]
       },
@@ -1031,6 +1277,133 @@
           "images"
         ]
       },
+      "ReviewUserDetails": {
+        "type": "object",
+        "properties": {
+          "_uuid": {
+            "type": "string",
+            "description": "User id",
+            "example": "17a54659-a06a-464f-a914-190cee7d4b1a"
+          },
+          "firstName": {
+            "type": "string",
+            "description": "User first name",
+            "example": "Evgeny"
+          },
+          "lastName": {
+            "type": "string",
+            "description": "User last name",
+            "example": "Smirnov"
+          },
+          "avatarURL": {
+            "type": "string",
+            "description": "User avatar url"
+          }
+        },
+        "required": [
+          "_uuid",
+          "firstName",
+          "lastName",
+          "avatarURL"
+        ]
+      },
+      "ReviewDetails": {
+        "type": "object",
+        "properties": {
+          "_uuid": {
+            "type": "string",
+            "description": "Review d",
+            "example": "17a54659-a06a-464f-a914-190cee7d4b1a"
+          },
+          "content": {
+            "type": "string",
+            "description": "Content of review",
+            "example": "Best shoes"
+          },
+          "rating": {
+            "type": "string",
+            "description": "Reting of product (1-5)",
+            "example": 5
+          },
+          "user": {
+            "description": "Review owner info",
+            "example": {},
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/ReviewUserDetails"
+              }
+            ]
+          }
+        },
+        "required": [
+          "_uuid",
+          "content",
+          "rating",
+          "user"
+        ]
+      },
+      "ReviewListDetails": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "description": "Review list",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ReviewDetails"
+            }
+          },
+          "pagintaion": {
+            "description": "Paggination info",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/PaginationDetails"
+              }
+            ]
+          }
+        },
+        "required": [
+          "data",
+          "pagintaion"
+        ]
+      },
+      "CreateReviewDto": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "string",
+            "description": "Content of review ( from 2 to 50 symbols )",
+            "example": "Best shoes"
+          },
+          "rating": {
+            "type": "number",
+            "description": "Rating of product (1-5)",
+            "example": 5
+          }
+        },
+        "required": [
+          "content",
+          "rating"
+        ]
+      },
+      "UpdateReviewDto": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "string",
+            "description": "Content of review ( from 2 to 50 symbols )",
+            "example": "Best shoes"
+          },
+          "rating": {
+            "type": "number",
+            "description": "Rating of product (1-5)",
+            "example": 5
+          }
+        },
+        "required": [
+          "content",
+          "rating"
+        ]
+      },
       "CreateCategoryDto": {
         "type": "object",
         "properties": {
@@ -1052,7 +1425,7 @@
       "CategoryDetails": {
         "type": "object",
         "properties": {
-          "uuid": {
+          "_uuid": {
             "type": "string",
             "description": "Category id",
             "example": "17a54659-a06a-464f-a914-190cee7d4b1a"
@@ -1081,7 +1454,7 @@
           }
         },
         "required": [
-          "uuid",
+          "_uuid",
           "name"
         ]
       },
@@ -1112,7 +1485,7 @@
       "ReturnUserProfileDetails": {
         "type": "object",
         "properties": {
-          "uuid": {
+          "_uuid": {
             "type": "string",
             "description": "User id",
             "example": "17a54659-a06a-464f-a914-190cee7d4b1a"
@@ -1143,7 +1516,7 @@
           }
         },
         "required": [
-          "uuid",
+          "_uuid",
           "firstName",
           "lastName",
           "login",
@@ -1209,7 +1582,7 @@
       "CartDetails": {
         "type": "object",
         "properties": {
-          "uuid": {
+          "_uuid": {
             "type": "string",
             "description": "Cart id",
             "example": "17a54659-a06a-464f-a914-190cee7d4b1a"
@@ -1223,8 +1596,27 @@
           }
         },
         "required": [
-          "uuid",
+          "_uuid",
           "products"
+        ]
+      },
+      "SelectCartItemDto": {
+        "type": "object",
+        "properties": {
+          "selected": {
+            "description": "Selected cart item _uuid",
+            "example": [
+              "17a54659-a06a-464f-a914-190cee7d4b1a",
+              "17a54659-a06a-464f-a914-190cee7d4b1a"
+            ],
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "selected"
         ]
       }
     }
